dashboard element for arabic-like alignment fixed

--- a/app/MyApp/app/Home-Urdu.css
+++ b/app/MyApp/app/Home-Urdu.css
@@ -221,10 +221,6 @@ table.stu-nav-table{
 {
     height: 400px;
 }
-.stu-nav-tube
-{
-    border: 5px solid black;
-}
 .name{
     font-size: 30px;
     padding-top: 12px;
